packages/components/src/components/InlineCode/InlineCode.module.scss
.inlineCode {
  font-family: FiraCode, monospace;
  font-size: var(--inline-code--font-size);
  overflow-wrap: break-word;
  padding-inline: var(--inline-code--padding-x);
  padding-block: var(--inline-code--padding-y);
  border-radius: var(--inline-code--corner-radius);
  display: inline;
  width: fit-content;
  max-width: 100%;
  min-width: 0;
  color: var(--inline-code--content-color);
  background-color: var(--inline-code--background-color);

  @mixin color($color) {
    &:where(.#{$color}) {
      color: var(--inline-code--#{$color}-content-color);
      background-color: var(--inline-code--#{$color}-background-color);
    }
  }

  @include color(dark);
  @include color(light);
  @include color(dark-static);
  @include color(light-static);
}

